[project]
name = "quiv"
version = "0.1.0"
description = "Quiv: threadpool-backed scheduler for Python applications"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
	"sqlmodel>=0.0.23",
	"tzdata>=2024.1",
]

authors = [
	{ name = "Uma Nandyala" },
]

keywords = ["scheduler", "async", "threadpool", "background-tasks", "stop-events", "progress-callbacks"]

classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[dependency-groups]
dev = [
	"pytest>=9.0.2",
	"pytest-cov>=5.0.0",
    "zensical>=0.0.24",
]

[project.urls]
Homepage = "https://github.com/nandyalu/quiv"
Documentation = "https://nandyalu.github.io/quiv"
Repository = "https://github.com/nandyalu/quiv"

[project.scripts]
quiv = "main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["quiv/py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["quiv"]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^docs/"]

